# EditorLevel2DARM64

./: .gitattributes  .gitignore  Add.md  CHANGELOG.md  Cargo.toml  GUIDE_CHARGER.md  GUIDE_CONFIGURATION.md  GUIDE_COULEURS.md  GUIDE_MIGRATION.md  GUIDE_PARSERS.md  GUIDE_PROJETS.md  GUIDE_REMPLISSAGE.md  GUIDE_TEST.md  GUIDE_UNDO_SELECTION.md  NOUVEAUTES.md  QUICKSTART.md  README.md  RECAP_REMPLISSAGE.md  VERSION.md  demo_charger.sh  demo_projets.sh  demo_pygame.py  exemple_avec_calques.json  exemple_couleurs_hex.json  exemple_niveau.json  exemple_projet.editorproj  install.sh  test.editorproj  test.json  test1.json  test_format.py  test_installation.sh  test_parser.py  uninstall.sh
parsers/: README.md  __init__.py  bevy_parser.rs  pygame_parser.py
parsers/pygame/: pygame_parserV2.py
src/: asset_manager.rs  editor.rs  level.rs  main.rs  project.rs  ui.rs
